# mypostbank-ui/src/openapi/openapi.json
@@ -1648,6 +1648,30 @@
         }
       }
     },
+    "/admin/transactions/noPage": {
+      "get": {
+        "tags": [
+          "admin-controller"
+        ],
+        "summary": "Get all transactions",
+        "operationId": "getAllTrans",
+        "responses": {
+          "200": {
+            "description": "OK",
+            "content": {
+              "application/json": {
+                "schema": {
+                  "type": "array",
+                  "items": {
+                    "$ref": "#/components/schemas/TransactionDTO"
+                  }
+                }
+              }
+            }
+          }
+        }
+      }
+    },
     "/admin/loans": {
       "get": {
         "tags": [
